[package]
name = "dynamecs-analyze"
version = "0.0.1"
edition = "2021"

[dependencies]
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
flate2 = "1.0.25"
time = { version = "0.3.20", features = ["serde", "parsing"] }
# TODO: Introduce proper error types instead of using eyre
eyre = "0.6.8"

[dev-dependencies]
time = { version = "0.3.20", features = ["macros"] }


