[package]
name = "dynamecs-analyze"
version = "0.0.2"
edition = "2021"
description = "Functionality for working with dynamecs-app log files."
license = "MIT"
repository = "https://github.com/Andlon/dynamecs"

[dependencies]
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
flate2 = "1.0.25"
time = { version = "0.3.20", features = ["serde", "parsing", "formatting"] }
# TODO: Introduce proper error types instead of using eyre
eyre = "0.6.8"
itertools = "0.10.5"

[dev-dependencies]
insta = "1.29.0"
escargot = "0.5.7"
tempfile = "3.5.0"



