[package]
name = "dynamecs-app"
authors = [ "Andreas Longva" ]
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
dynamecs = { path = "../dynamecs" }
structopt = "0.3.22"
serde = "1.0.127"
serde_json = "1.0.66"
json5 = "0.4.1"
log = "0.4.14"
eyre = "0.6.5"
snap = "1.0"
bincode = "1.3"