[package]
name = "dynamecs-app"
authors = [ "Andreas Longva" ]
version = "0.0.10"
edition = "2021"
license = "MIT"
publish = true
description = "An opinionated ECS-like architecture for time-dependent simulations"

[dependencies]
dynamecs = { path = "../dynamecs", version = "0.0.4" }
clap = { version = "4.1.4", features = [ "derive" ] }
serde = "1.0.127"
serde_json = "1.0.66"
serde_ignored = "0.1.7"
json5 = "0.4.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["json"] }
eyre = "0.6.5"
snap = "1.0"
bincode = "1.3"
chrono = "0.4.23"
flate2 = "1.0"
ctrlc = { version = "3.2.5", features = ["termination"] }
