[package]
name = "dynamecs"
version = "0.0.1"
authors = [ "Andreas Longva" ]
edition = "2021"
license = "MIT"
publish = true

[dependencies]
serde = { version="1.0", features=["derive"] }
erased-serde = { version="0.3" }
once_cell = "1.5"
eyre = "0.6.5"

[dev-dependencies]
serde_json = "1.0"
bincode = "1.3.3"
cool_asserts = "1.1.1"
